--- a/css/styles.css
+++ b/css/styles.css
@@ -77,14 +77,27 @@
        justify-content: space-between; 
       width: 294px;
       padding-top: 32px;
-      padding-bottom: 32px;
+      /* padding-bottom: 32px; */
       margin-left: 93px;
  }
  .sait-link li:not(:last-child){
       margin-right: 50px;
  }
  .active {
+     position: relative;
      color: var(--color-button-logo);
+}
+.active::after{
+     display: flex;
+     content: "";
+     width: 48px;
+     border: 4px solid;
+     background: var(--color-button-logo);
+     border-radius: 2px;
+     margin-top: 32px;
+     margin-bottom: -1px;
+     
+     
 }
 
  .sait-contacts{
