--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,6 @@
       /* Чем занимаемся */
 
   .box-img{
-       /* position: relative; */
      display: flex;
      justify-content: space-between;
  } 
@@ -298,11 +297,10 @@
      position: relative; 
  }
  .case{
-      
+     position: absolute;
       bottom: 0;
       width: 370px;
-      height: 70px;
-      position: absolute;
+      height: 70px;      
       display: flex;           
       width: 370px;
       height: 70px;
@@ -609,4 +607,26 @@
       margin-top: 4px;
  }  
  
+ .card-thumb{
+      position: relative;
+ }
+ .card-box{ 
+     position: absolute;
+     width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;      
+      width: 370px;
+      height: 294px;
+      background: rgba(33, 150, 243, 0.9);
+      /* transform: scale(1);
+      opacity: 0; */
+ }
+ .card-text{      
+      font-size: 18px;
+      line-height: 1.555; 
+      letter-spacing: 0.03em;
+      margin: 63px 24px;
+      color: var(--white-color);
+ }
  
