--- a/css/styles.css
+++ b/css/styles.css
@@ -86,20 +86,18 @@
  .active {
      /* position: relative; */
      color: var(--color-button-logo);
-}
-.active::after{
+ }
+ .active::after{
      
      display: flex;
      content: "";
-     width: 48px;
-     border: 4px solid;
+     width: inherit;
+     border-bottom: 4px solid;
      background: var(--color-button-logo);
      border-radius: 2px;
-     margin-top: 28px;
-     margin-bottom: -1px;
-     
-     
-}
+     margin-top: 30px;
+     margin-bottom: -1px;   
+ }
 
  .sait-contacts{
       display: flex;
@@ -659,7 +657,7 @@
   .modal-tape{
       width: 11px;
       height: 11px;
-      fill: var(--main-color-headers)
+      fill: currentColor;
       
  }
   
@@ -680,5 +678,11 @@
  .tape:hover,
  .tape:focus{
       border-color: var(--color-button-logo);
-      fill: var(--color-button-logo);
+      color: var(--color-button-logo);
  }
+ .is-hidden {
+     visibility: hidden;
+     opacity: 0;
+     pointer-events: none;
+     transition: opacity 2500ms cubic-bezier(0.215, 0.610, 0.355, 1), visibility 5000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+   }
