--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,7 @@
      width: 44px;
      height: 44px;   
      border-radius: 50%;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
  }
  .icons-ref:hover,
  .icons-ref:focus{
@@ -427,6 +428,7 @@
       width: 170px;
       height: 92px;
       border: 1px solid #AFB1B8;
+      transition:  250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
  }
  
    .company-list:not(:last-child){
@@ -490,6 +492,7 @@
      width: 44px;
      height: 44px;   
     border-radius: 50%; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
 }  
  .footer .logo{
    color: var(--white-color);      
@@ -536,20 +539,22 @@
       line-height: 1.625;
       text-align: center;
       letter-spacing: 0.03em;
-      background: var(--team-filter-btn-bg);
+      background-color: var(--team-filter-btn-bg);
       color: var(--main-color-headers); 
       padding: 6px 22px;
       cursor: pointer;  
       margin-right: 8px; 
       border: none;
-      border-radius: 4px;   
+      border-radius: 4px;  
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms; 
   }
   .btn:hover, 
   .btn:focus{
-     background: var(--color-button-logo);
+     background-color: var(--color-button-logo);
      color: var(--white-color);
      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
- } 
+     
+} 
   .filter{
       margin-bottom: 50px; 
   }
@@ -588,7 +593,7 @@
  .activ:hover,
  .activ:focus{
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
+      
  }
  .portfolio-item{
       font-weight: bold;
@@ -679,10 +684,13 @@
  .tape:focus{
       border-color: var(--color-button-logo);
       color: var(--color-button-logo);
+      
  }
  .is-hidden {
      visibility: hidden;
      opacity: 0;
      pointer-events: none;
-     transition: opacity 2500ms cubic-bezier(0.215, 0.610, 0.355, 1), visibility 5000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+     transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 5000ms cubic-bezier(0.4, 0, 0.2, 1);
    }
+
+   
