--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@
  }
  .connect:hover,
  .connect:focus{
-    Fill: var(--color-button-logo) ;      
+    fill: var(--color-button-logo) ;          
  }
   
  .link:hover, 
@@ -388,7 +388,7 @@
      width: 44px;
      height: 44px;   
      border-radius: 50%;
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .icons-ref:hover,
  .icons-ref:focus{
@@ -428,7 +428,7 @@
       width: 170px;
       height: 92px;
       border: 1px solid #AFB1B8;
-      transition:  250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
+      transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  
    .company-list:not(:last-child){
@@ -492,7 +492,7 @@
      width: 44px;
      height: 44px;   
     border-radius: 50%; 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }  
  .footer .logo{
    color: var(--white-color);      
@@ -546,7 +546,7 @@
       margin-right: 8px; 
       border: none;
       border-radius: 4px;  
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 500ms; 
+       transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .btn:hover, 
   .btn:focus{
@@ -678,7 +678,6 @@
      border-radius: 50%;
      border: 1px solid rgba(0, 0, 0, 0.1);
      cursor: pointer;
-     /* fill: var(--main-color-headers); */
  }
  .tape:hover,
  .tape:focus{
@@ -690,7 +689,7 @@
      visibility: hidden;
      opacity: 0;
      pointer-events: none;
-     transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 5000ms cubic-bezier(0.4, 0, 0.2, 1);
+     transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 5000ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
    
