--- a/css/styles.css
+++ b/css/styles.css
@@ -64,14 +64,12 @@
  /* навигация */
    .sait-nav {  
       display: flex;
-       align-items: center; 
-                           
+       align-items: center;                           
  } 
   
  header{
      border-bottom: 1px solid #ECECEC;
- }
-  
+ }  
   .sait-link{
        display: flex; 
        justify-content: space-between; 
@@ -84,11 +82,11 @@
       margin-right: 50px;
  }
  .active {
-     /* position: relative; */
+      
      color: var(--color-button-logo);
  }
  .active::after{
-     
+     /* position: absolute; */
      display: flex;
      content: "";
      width: inherit;
@@ -98,7 +96,6 @@
      margin-top: 30px;
      margin-bottom: -1px;   
  }
-
  .sait-contacts{
       display: flex;
       justify-content: space-between;
@@ -121,7 +118,6 @@
       color: var(--main-text-color);  
       width: 135px;         
  }
-
  .sait-contacts .phone{
       font-family: Roboto;
       font-style: normal;
@@ -183,8 +179,7 @@
       margin-right: auto;
       background-image:linear-gradient(to right, rgba(48, 58, 47, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
                  
-      background-color: var(--hero-footer-background); 
-     
+      background-color: var(--hero-footer-background);
  }
          
  .hero .title{  
@@ -229,14 +224,12 @@
  .feature-columns{
      display: flex; 
      justify-content: space-between; 
- }
- 
-.group{
+ } 
+ .group{
      width: 70px;
      height: 70px;
 }
-
-.gpoup-icon{
+ .gpoup-icon{
      display: inline-flex; 
      justify-content: center;
      align-items: center; 
@@ -249,11 +242,9 @@
      display: flex; 
      justify-content: space-between;
  }
-
  .columns li:not(:last-child){
       margin-right: 30px;
  }
-
   .feature ul{
       display: flex;      
  }
@@ -270,7 +261,6 @@
       margin-top: 30px;
       
  }
-
  .feature-text{
       width: 270px;
       font-weight: normal;
@@ -286,7 +276,6 @@
      display: flex;
      justify-content: space-between;
  } 
-
  .work{
        background: var(--feature-portfolio-work-bg); 
        padding-bottom: 94px; 
@@ -318,8 +307,7 @@
  }
 
   /* Команда */
- 
- .team{
+  .team{
      
       background: var(--team-filter-btn-bg);
       padding-top: 94px;
@@ -394,8 +382,7 @@
  .icons-ref:focus{
      fill: var(--white-color);
       background-color:var(--color-button-logo) ;  
- }
-  
+ }  
 
  /* Постоянные клиенты */
   .client{
@@ -482,7 +469,6 @@
 .list-social:not(:last-child){
      margin-right: 10px;
 }
-
 .social-svg{
       display: inline-flex;
      justify-content: center;
@@ -552,9 +538,8 @@
   .btn:focus{
      background-color: var(--color-button-logo);
      color: var(--white-color);
-     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-     
-} 
+     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);   
+ } 
   .filter{
       margin-bottom: 50px; 
   }
@@ -577,7 +562,6 @@
       margin-left: -30px; 
        /* outline: 1px solid rgb(71, 255, 117);  */
  } 
-
  .projekt-choice{
        flex-basis: calc((100% - 90px) / 3);
       margin-left: 30px;
@@ -588,9 +572,8 @@
       padding: 20px 24px;
       background-color: var(--white-color);
      border: 1px solid var(--card-content-border);  
-}
- 
- .activ:hover,
+ }
+  .activ:hover,
  .activ:focus{
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
       
@@ -609,10 +592,10 @@
       letter-spacing: 0.03em;
       color: var(--main-text-color);
       margin-top: 4px;
- }  
- 
+ }   
  .card-thumb{
       position: relative;
+      overflow: hidden;      
  }
  .card-box{ 
      position: absolute;
@@ -624,19 +607,21 @@
       height: 294px;
       background: rgba(33, 150, 243, 0.9);
       overflow: auto;
-      
+    
+      transform: translateY(100%);  
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+ }
+ .card:hover .card-box{
+     transform: translateY(0);
  }
  .card-text{      
       font-size: 18px;
       line-height: 1.555; 
       letter-spacing: 0.03em;
       margin: 63px 24px;
-      color: var(--white-color);
-      
- }
- 
+      color: var(--white-color);     
+ } 
  .modal{
-      
       position: fixed;
        top: 0;
       left: 0;       
@@ -656,16 +641,13 @@
      width: 528px;
      height: 581px;
     background: var(--white-color); 
-    padding: 9px;
-    /* box-shadow: ;       */
+    padding: 9px;    
  }
   .modal-tape{
       width: 11px;
       height: 11px;
-      fill: currentColor;
-      
- }
-  
+      fill: currentColor;      
+ }  
  .tape{
      position: absolute;
      right: 8px;
@@ -682,14 +664,13 @@
  .tape:hover,
  .tape:focus{
       border-color: var(--color-button-logo);
-      color: var(--color-button-logo);
-      
+      color: var(--color-button-logo);      
  }
  .is-hidden {
      visibility: hidden;
      opacity: 0;
      pointer-events: none;
      transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 5000ms cubic-bezier(0.4, 0, 0.2, 1);
-   }
+ }
 
    
