--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,7 @@
        display: flex; 
        justify-content: space-between; 
       width: 294px;
-      padding-top: 32px;
-      /* padding-bottom: 32px; */
+      padding-top: 32px;     
       margin-left: 93px;
  }
  .sait-link li:not(:last-child){
@@ -86,8 +85,7 @@
       
      color: var(--color-button-logo);
  }
- .active::after{
-     /* position: absolute; */
+ .active::after{    
      display: flex;
      content: "";
      width: inherit;
@@ -97,24 +95,13 @@
      margin-top: 30px;
      bottom: -1px;  
      margin-bottom: -1px;
-     /* opacity: 1; */
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     opacity: 0; 
+     transition:  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
  }
- /* .active::after{
-     content: "";
-     position: absolute;
-     margin: -32px;
-     display: block;
-     width: 100%;
-     height: 4px;
-     border: 2px solid;
-  background-color: #2196F3;
-     border-radius: 2px;
-     opacity: 0;
-     transition: opacity 250ms;
- } */
+ 
   .active:hover::after{
+       opacity: 1;
        background-color: var(--color-button-logo);
 
  } 
